--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.11"
 dependencies = [
     "flask>=3.1.2",
     "gunicorn>=25.0.3",
+    "pylance>=2.0.1",
+    "requests>=2.32.5",
 ]
